--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,27 @@
   box-sizing: border-box;
 }
 
+.container {
+  text-align: center;
+  width: 300px;
+}
+
 ol {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
 
+li {
+  text-align: right;
+}
+
 .first-day {
   grid-column-start: 5;
+}
+
+.day-name {
+  background: #eee;
+  font-weight: bold;
+  text-align: center;
 }
