--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .container-junuary,
 .container-february,
 .container-march,
